src/objects/MMD_Con_Other_Service__c.object
<CustomObject>
    <description>(MBI) - MMD - Consultant Services Provided notes</description>
    <fields>
        <fullName>Firm_Name__c</fullName>
        <formula>$Organization.Country</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Firm Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <label>Firm MMD ID</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMD_Firm_Profile__c</fullName>
        <label>MMD Firm Profile</label>
        <referenceTo>MMCOMP__c</referenceTo>
        <relationshipLabel>Other Services</relationshipLabel>
        <relationshipName>MMD_Con_Other_Services</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>NAME__c</fullName>
        <label>Service</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SEQ_NO__c</fullName>
        <label>Sequence #</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Type__c</fullName>
        <label>Service Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEXT__c</fullName>
        <label>Service Description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <label>MMD Con Other Service</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Link</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MMD Con Other Services</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>